# ls_pj04_05

./: README.md  pyproject.toml  requirements.txt  run.py  setup_modules.py
data/: README.md  dfg_2023_귀농데이터.csv  dfg_2023_귀농데이터2.csv  gungsang.csv  heatmap.py  ikhyeon.csv  귀농인구수_choropleth.html  귀농인구수_choropleth_label완성.html  귀농인구수_choropleth_남한_label.html  귀농인구수_choropleth_남한만.html  귀농인구수_choropleth_세로범례.html  귀농인구수_choropleth_최종.html  귀농인구수_choropleth_최종작업.html
data/raw/경상북도/: 경상북도 상주시_농공단지 입지업체 현황_20211014.csv  경상북도_귀농_귀촌_가구수.csv  경상북도_귀농_귀촌_가구원수.csv
data/raw/상주/귀농/: 귀농_전_대비_귀농_후_전반적인_생활_만족도.csv  귀농의_형태_20250514133332.csv  등록_사항_20250514133405.csv  전반적인_귀농_생활_만족도_20250514133532.csv
data/raw/영천/: 2021_만족도조사_영천시.csv
data/raw/전국/: 환경체감도_20250514141735.csv  환경체감도_20250514141832.csv
data_analystics/ik/: ik.py  귀농인구수_choropleth.html  귀농인구수_choropleth_최종작업.html  귀농인구수_choropleth_최종작업_clean.html  인프라V2.py
data_analystics/pyun/: pyun.py  귀농_전_거주지_20250515170923.csv  시도별_전거주지별_귀농가구원.csv  영천시_의료기관.csv  영천환경체감도_2023.csv  인프라.py
data_analystics/top_three_comparison/: top_three_farming_population.py
modules/: map_utils.py
rsconnect-python/: ls_pj04_5.json
shiny_dashboard/: app.py
shiny_dashboard/data/: migration_data.py  region_comparison_data.py  top_three.py
shiny_dashboard/data/raw/: 경상북도_귀농 및 귀촌 가구원 수 현황_20231231.csv
shiny_dashboard/pages/: __init__.py  comparison_page.py  farming_population.py  region_comparison_pages.py  yeongcheon_page.py
shiny_dashboard/rsconnect-python/: shiny_dashboard.json
shiny_dashboard/styles/: styles.py
(+14 files in other folders)
